--- a/project_Savitskii_OB32.ipynb
+++ b/project_Savitskii_OB32.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "8d2f70e7-d956-433b-b10a-14336cc97385",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "ef0b964d-cc41-42c8-85e1-0aca73d57276",
    "metadata": {},
    "outputs": [
@@ -83,7 +84,7 @@
        "4  20.58  31.50"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "id": "ff9eedde-a6da-4b0f-a57e-435bd6b09f94",
    "metadata": {},
    "outputs": [
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "id": "3cb32907-e15b-4e07-aa70-05220c8d9f36",
    "metadata": {},
    "outputs": [
@@ -200,12 +201,14 @@
     "\n",
     "a = correlation_coef * y_var / x_var\n",
     "b = y_mean - x_mean*a\n",
+    "\n",
+    "coeffs_for_line_reg = (a, b)\n",
     "print(f\"Коэффициенты: a = {round(a,2)}, b = {round(b,2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "id": "308563a8-4620-4a24-9e2d-b1140f9cec76",
    "metadata": {},
    "outputs": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 23,
    "id": "df90edb9-4d63-4d18-93d5-12686582cfd8",
    "metadata": {},
    "outputs": [
@@ -311,12 +314,13 @@
     "B = np.array([S_x2y, S_xy, S_y])\n",
     "\n",
     "b1, b2, b3 = np.linalg.solve(A, B)\n",
+    "coeffs_for_squared_reg = (b1, b2, b3)\n",
     "print(f\"Коэффициенты: b1 = {round(b1,2)}, b2 = {round(b2,2)}, b3 = {round(b3,2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "id": "8a72ecd5-c50d-43a0-b5ff-7535b41b1a5d",
    "metadata": {},
    "outputs": [
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 26,
    "id": "c88d6b12-f8c9-456b-903c-8b9118fb9c8c",
    "metadata": {},
    "outputs": [
@@ -409,12 +413,13 @@
     "            ])\n",
     "\n",
     "b1, b2, b3, b4 = np.linalg.solve(A, B)\n",
+    "coeffs_for_cubed_reg = (b1,b2,b3,b4)\n",
     "print(f\"Коэффициенты: b1 = {round(b1,2)}, b2 = {round(b2,2)}, b3 = {round(b3,2)}, b4 = {round(b4, 2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 27,
    "id": "c9d854b9-d62b-4a94-8e7b-e21ebf008282",
    "metadata": {},
    "outputs": [
@@ -482,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "id": "c8de325a-88f6-4d68-a478-ff2c6a214a69",
    "metadata": {},
    "outputs": [
@@ -503,12 +508,13 @@
     "B = np.array([np.sum(ln_X * Y), np.sum(Y)])\n",
     "\n",
     "b1, b2 = np.linalg.solve(A, B)\n",
+    "coeffs_for_log_reg = (b1, b2)\n",
     "print(f\"Коэффициенты: b1 = {round(b1,2)}, b2 = {round(b2,2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "id": "1135a9c4-6bb6-4468-a078-7885836d444e",
    "metadata": {},
    "outputs": [
@@ -526,6 +532,7 @@
    "source": [
     "x = np.linspace(1, 25, 100)\n",
     "y = b1*np.log(x) + b2\n",
+    "\n",
     "plt.figure(figsize=(10,5), dpi=120)\n",
     "sns.scatterplot(data = df, x = 'X', y = 'Y')\n",
     "sns.lineplot(x = x, y = y, color='red')\n",
@@ -534,9 +541,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9eda490e-0933-4dfd-9c7c-efb2355de95b",
+   "metadata": {},
+   "source": [
+    "Все четыре графика в целом хорошо ложаться на точки, но все же какой из них подойдет лучше?\n",
+    "Для этого можно посчитать метрику среднего квадрата отклонения (mean_squared_error, MSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0e5487a7-c4be-4e55-915d-97bfa95c7d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.753908359009097"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1_line, b2_line = coeffs_for_line_reg\n",
+    "\n",
+    "y_predict = X*b1_line + b2_line\n",
+    "MSE_for_line_reg = mean_squared_error(y_predict, Y)\n",
+    "\n",
+    "MSE_for_line_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "75b8df1e-86f4-4c55-8267-9a853c49d6ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.356310958870502"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1_squared, b2_squared, b3_squared = coeffs_for_squared_reg\n",
+    "\n",
+    "y_predict = X**2 * b1_squared + X * b2_squared + b3_squared\n",
+    "MSE_for_squared_reg = mean_squared_error(y_predict, Y)\n",
+    "\n",
+    "MSE_for_squared_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "99be387d-961d-4d16-9187-6c9359b4ae37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.722486954975059"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1_cubed, b2_cubed, b3_cubed, b4_cubed = coeffs_for_cubed_reg\n",
+    "\n",
+    "y_predict = X**3 * b1_cubed + X **2 * b2_cubed + b3_cubed * X + b4_cubed\n",
+    "MSE_for_cubed_reg = mean_squared_error(y_predict, Y)\n",
+    "\n",
+    "MSE_for_cubed_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "26ba8188-250f-40d2-883e-7482e4525917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.027113179732181"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b1_log, b2_log = coeffs_for_log_reg\n",
+    "\n",
+    "y_predict = np.log(X)*b1_log + b2_log\n",
+    "MSE_for_log_reg = mean_squared_error(y_predict, Y)\n",
+    "\n",
+    "MSE_for_log_reg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "569d6d1c-2684-4650-a6b8-3bcde92c416c",
+   "metadata": {},
+   "source": [
+    "Мы получили, что лучшая модель для описания представленных данных - кубическая.\n",
+    "Закономерность следующая : чем сложнее модель, тем лучше она подходит для описания\n",
+    "представленных данных. Чем большую степень полинома мы берем, тем лучше график\n",
+    "функции \"ложиться\" на точки, поскольку большие степени лучше реагировать\n",
+    "на шумы в данных."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa89ba6-33ee-4950-a9fb-59d6ce46ce6c",
+   "id": "0464f58c-1ce6-4c8c-9a7c-a02bf31efffa",
    "metadata": {},
    "outputs": [],
    "source": []
